# numba_midi

./: .gitignore  README.md  environment.yml  mypy.ini  numba_midi.code-workspace  pyproject.toml  python_activate.bat  python_setup_env.bat  python_update_requirements.bat  requirements.in  requirements.txt  ruff.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml  run-tests.yml
src/: pyproject.toml
src/numba_midi/: __init__.py  _score_numba.py  draw.py  edition.py  instruments.py  midi.py  midi_draw.py  numba_2dengine.py  numba_draw.py  pianoroll.py  score.py  score.py.bak  utils.py
src/numba_midi/_cython_stubs/: _midi_cython.pyi
src/numba_midi/cython/: __init__.py  draw.pyx  engine2d.pyx  midi.py  midi.pyx  pianoroll.pyx  score.py  score.pyx
src/numba_midi/editor/: midi_editor.py  numba_draw.py
src/numba_midi/interop/: pretty_midi.py  symusic.py  tinysoundfont.py
src/numba_midi/numba/: draw.py  engine2d.py  midi.py  pianoroll.py  score.py
tests/: benchmarks.py  example.py  lakhmidi_brenchmark.py  test_benchmarks.py  test_drawing_regression.py  test_midi.py  test_pianoroll.py  test_score.py
tests/data/numba_midi/: empty_tracks1.mid  empty_tracks2.mid  empty_tracks3.mid  guitar.mid  si64.mid  testsi48.mid
tests/interpo/: test_pretty_midi.py  test_symusic.py
