[build-system]
requires = ["setuptools>=61", "wheel", "cython>=3.0", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "numba_midi"
version = "0.1.30"
description = "numba-accelerated python midi score processing library."
authors = [{ name = "Martin de La Gorce" }]
dependencies = ["numpy>=1.24"]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[project.optional-dependencies]

dev = [
    "ruff",
    "pytest",
    "mypy", 
    "types-pyaudio",
    "symusic",
    "tqdm",
    "pretty_midi",
    "symusic",
    "tinysoundfont",
    "setuptools",
    "requests",
    "types-requests",
    "pandas", 
    "Pillow"
]


[project.urls]
Homepage = "https://github.com/martinResearch/numba_midi"

[dependency-groups]
dev = [
    "cython>=3.1.2",
]

[tool.setuptools.package-data]
"numba_midi" = ["py.typed"]

[tool.cython-lint]
max-line-length = 120

